test_scripts/errors/string_interp_undefined.stderr
 1 | "\(undefined_var)";
        ^^^^^^^^^^^^^
Error: Unknown identifier "undefined_var"
